--- a/login_sign_up/login.html
+++ b/login_sign_up/login.html
@@ -11,7 +11,7 @@
     <nav class="navigation">
         <a href="home.html">Home</a>
         <a href="">About</a>
-        <button onclick="signupPage()">Sign Up</button>
+        <button onclick="signupPage()" class="opbtn">Sign Up</button>
     </nav>
 </header>
 
