--- a/login_sign_up/registered.html
+++ b/login_sign_up/registered.html
@@ -10,7 +10,7 @@
         <div>
             <img src="registered.png" alt="registered_icon">
             <h2>All Set, You can now Log In</h2>
-            <button onclick="loginPage()">Log In</button>
+            <button onclick="loginPage()" class="opbtn">Log In</button>
         </div>
     </div>
 
