--- a/login_sign_up/signUp.html
+++ b/login_sign_up/signUp.html
@@ -11,7 +11,7 @@
         <nav class="navigation">
             <a href="home.html">Home</a>
             <a href="">About</a>
-            <button onclick="loginPage()">Log In</button>
+            <button onclick="loginPage()" class="opbtn">Log In</button>
         </nav>
     </header>
 
